fix(frontend): fix missing margin on tags

--- a/frontend_lib/src/component/Tags/TagList.styl
+++ b/frontend_lib/src/component/Tags/TagList.styl
@@ -51,6 +51,7 @@
         display flex
         flex-direction row
         margin-left 12px
+        margin-bottom 10px
 
 @media (max-width: max-lg)
   .tagList
